--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 <!-- Custom CSS -->
 <style>
+  title{
+    color:blue;
+  }
   body {
     font-family: Arial, sans-serif;
     background-color: #f8f9fa;
